# glados_tts_remote

./: .dockerignore  .envrc  .gitignore  .yamllint.yaml  Dockerfile  Dockerfile.models  Dockerfile.server  README.md  config.yaml  engine.py  flake.nix  glados.py  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  models.yml  validate.yaml
custom_components/glados_tts_remote/: __init__.py  config_flow.py  const.py  manifest.json  pyproject.toml  strings.json  tts.py
custom_components/glados_tts_remote/translations/: en.json
utils/: tools.py
utils/text/: cleaners.py  recipes.py  symbols.py  tokenizer.py
