[tool.poetry]
name = "glados-tts"
version = "0.1.0"
description = "Text-to-speech (TTS) engine that emulates GLaDOS."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = [
  {version = "^2.2.2+cpu"} #, markers = "platform_machine != 'aarch64'"},
]
deep-phonemizer = "^0.0.19"
pydub = "^0.25.1"

# setting these package versions to match those provided by alpine
# Use https://pkgs.alpinelinux.org/packages to determine versions

grpcio = "1.62.1"
inflect = "7.2.1"
nltk = "3.8.1"
numpy = "1.25.2"
scipy = "1.11.4"
werkzeug = "3.0.6"
unidecode = "1.3.8"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
