[tool.poetry]
name = "glados-tts"
version = "0.1.0"
description = "Text-to-speech (TTS) engine that emulates GLaDOS."
authors = ["Terrance Kennedy <terrance@missingtoken.net>", "R2D2FISH <r2d2fish@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.server.dependencies]
flask = "^3.1.0"
torch = [
  {version = "^2.2.2+cpu"}
  # {version = "^2.2.2", markers =  "platform_machine != 'aarch64'"}
]
numpy = "^1.23.5"
unidecode = "^1.3.8"
inflect = "^7.4.0"
deep-phonemizer = "^0.0.19"
scipy = "^1.14.1"
nltk = "^3.9.1"
pydub = "^0.25.1"

# These dependencies locked to versions provided by system packages installed in Dockerfile.server
grpcio = "1.51.1"
protobuf = "4.21.12"
filelock = "3.9.0"

[tool.poetry.group.integration.dependencies]
homeassistant = "*"
voluptuous = "*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
